# Chess

./: .gitignore  CMakeLists.txt  CheckBlocked.h  CheckChecked.h  CheckCheckmate.h  CheckLogic.h  CheckMove.h  ConsoleColors.h  Draw.h  Figures.h  GetInput.h  Initialize.h  InitializeSDL.h  Main.c  Move.h  README.md  StructDefinitions.h  buildSDL.bat  builddebug.bat  builddebug.sh  buildrun.bat  buildrun.sh  run.bat  run.sh
source/: CheckBlocked.c  CheckBlocked.h  CheckCastling.c  CheckCastling.h  CheckChecked.c  CheckChecked.h  CheckCheckmate.c  CheckCheckmate.h  CheckLogic.c  CheckLogic.h  CheckMove.c  CheckMove.h  Draw.c  Draw.h  DrawCircle.c  DrawCircle.h  DrawTextfield.c  DrawTextfield.h  Figures.c  Figures.h  Initialize.c  Initialize.h  InitializeDebug.c  InitializeDebug.h  InitializeSDL.c  InitializeSDL.h  Main.c  Move.c  Move.h  PlaySound.c  PlaySound.h  ShowMessageBox.c  ShowMessageBox.h  StructDefinitions.h  Variables.h
